--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#home" class="logo">
-                <div class="logo-icon"><img src="images/Logo.jpg" alt="" style="width: 70px;"></div>
+                <div class="logo-icon"><img src="Logo.jpg" alt="" style="width: 70px;"></div>
                 <span></span>
             </a>
             <ul class="nav-links">
@@ -263,6 +263,7 @@ Global online audiences</div>
                 }
         });
 </script>
+
 
 
 
